# Centroid-Object-Tracking

./: CMakeLists.txt  LICENSE  README.md  centroidtracker.cpp
include/: centroidtracker.h
src/: centroidtracker.cpp  main.cpp
